tests/ui/core_splice_kind_reintroduction.stderr
error[E0432]: unresolved imports `hibana::integration::cap::advanced::RerouteKind`, `hibana::integration::cap::advanced::SpliceAckKind`, `hibana::integration::cap::advanced::SpliceIntentKind`
 --> tests/ui/core_splice_kind_reintroduction.rs:1:42
  |
1 | use hibana::integration::cap::advanced::{RerouteKind, SpliceAckKind, SpliceIntentKind};
  |                                          ^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^ no `SpliceIntentKind` in `integration::cap::advanced`
  |                                          |            |
  |                                          |            no `SpliceAckKind` in `integration::cap::advanced`
  |                                          no `RerouteKind` in `integration::cap::advanced`
